--- a/formuliare/style.css
+++ b/formuliare/style.css
@@ -1,51 +1,63 @@
 *{
     margin: 0px;
     padding: 0px;
-   
 }
 body{
-    background-color: #FFCF77;
+    background-color:black;
+}
+.mune{
+    display: none;
 }
 
-nav{
-    text-align: center;
-} 
-.logo{
-    border:#000000  solid 1px;
-    margin-bottom: 20px;
-    margin-top: 12px;
-    margin-right: 5px;
-    background-image: url(back3.jpg); 
-    border-radius: 8px;
-}
-img{
-    width: 90%;
-    height: 60%;
+img{  
+    width: 100%;
+    height: 80%;
 }
 main{
-    margin-left: 15px;
-    margin-right: 10px;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
+
 form{
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+label{
+    font-size: 20px;
 }
  input{
-    width:92% ;
+    width:100% ;
     padding: 10px;
-    margin-top: 5px;
     border-radius: 8px;
     border-color:#000000;    
 }
+.form-item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 .prix{
     display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    
 }
-.prix-min{
-    margin-right: 25px;
+.prix input {
+    width: 35%;
 }
 
 .vendue{
     display: flex;
     align-items:center;
+    flex-direction: row;
+    justify-content: start;
 }
 .vendue input{
     width: 20px;
@@ -56,14 +68,11 @@ form{
     margin-left: 5px;
 }
 .search{
-    text-align: center;
-    margin-left: 25%;
-    margin-right:20% ;
-    margin-top: 8px;
+    display: flex;
+    align-items: center;
 }
 .search input{
-    text-align: center;
-    background-image: url(back3.jpg);
+    width: 60%;  
     font-size: 20px;
 }
 input{
@@ -71,3 +80,67 @@ input{
     margin-bottom: 10px;
 }
 
+.container {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+
+    
+}
+.mune{
+    display: none;
+}
+@media screen and (min-width: 700px){ 
+    
+    main{
+        display: flex;
+        /*flex-direction: row;
+        justify-content: space-between;*/
+        background-image: url(img/bak.jpg);
+        background-size: cover;
+    }
+    
+    form{
+       /* margin-top: 20%;*/
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        height: auto;
+    }
+    .logo{
+        /*align-self: center;*/
+        width: 60%;
+        height: 20%;
+    }
+    img{  
+        width: 25%;
+        margin-left: 40px;
+
+    }
+    nav{ 
+       width: 100%;
+       display: flex; 
+       margin-bottom: 15px; 
+       background-color: #000000;   
+    }
+    .mune{
+        display: block;
+       width: 290px;
+    }
+    ol{
+        /*width: 80%;*/
+        display: flex;  
+    }
+    ol li {
+        margin-top: 35px;
+        margin-left: 35px;
+        list-style: none;
+    }
+    a{
+    color: white;
+    text-decoration: none;
+     }
+    a:hover{
+        text-decoration: underline;
+     }
+}
