--- a/formuliare/style.css
+++ b/formuliare/style.css
@@ -35,7 +35,9 @@ label{
     width:100% ;
     padding: 10px;
     border-radius: 8px;
-    border-color:#000000;    
+    border-color:#000000;  
+    margin-top: 10px;
+    margin-bottom: 10px;  
 }
 .form-item {
     width: 100%;
@@ -75,10 +77,6 @@ label{
     width: 60%;  
     font-size: 20px;
 }
-input{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
 
 .container {
     width: 90%;
@@ -90,14 +88,30 @@ input{
 .mune{
     display: none;
 }
-@media screen and (min-width: 700px){ 
+#section{
+    width:100%;
+    padding: 10px;
+    border-radius: 8px;
+    border-color:#000000;  
+    margin-top: 10px;
+    margin-bottom: 10px; 
+    border: 2px solid black; 
+
+}
+@media screen and (min-width: 1144px){ 
+    body{ 
+    background-image: url('img/bak.webp');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
     
     main{
         display: flex;
         /*flex-direction: row;
         justify-content: space-between;*/
-        background-image: url(img/bak.jpg);
-        background-size: cover;
+        /*background-image: url(img/bak.jpg);*/
+        
     }
     
     form{
@@ -105,7 +119,11 @@ input{
         display: flex;
         flex-direction: column;
         width: 50%;
+        padding-top: 10px;
         height: auto;
+        margin-top: 12px;
+        border-radius: 10px;
+        background-color:rgba(0,0,0,0.4);        
     }
     .logo{
         /*align-self: center;*/
@@ -113,13 +131,15 @@ input{
         height: 20%;
     }
     img{  
-        width: 25%;
-        margin-left: 40px;
+        width: 148px;
+        height: 50px;
+        margin-left: 25px;
 
     }
     nav{ 
        width: 100%;
        display: flex; 
+       height: 50px;
        margin-bottom: 15px; 
        background-color: #000000;   
     }
@@ -132,15 +152,45 @@ input{
         display: flex;  
     }
     ol li {
-        margin-top: 35px;
+        margin-top: 13px;
         margin-left: 35px;
         list-style: none;
     }
     a{
     color: white;
     text-decoration: none;
+    font-size: 18px;
+
      }
     a:hover{
         text-decoration: underline;
+        color: #e5c100;
      }
+     .form-item{
+        padding-top: 5px;
+     }
+     .input,.select{
+         width: 70%;
+         margin-left: 20px;
+     }
+     .prix{
+        
+         justify-content: start;
+         width: 537px;
+         margin-left: 144px;
+     }
+     input[type=submit]{
+         background-color: #ecd34c;
+     }
+      #section{
+        width:423px ;
+        padding: 10px;
+        border-radius: 8px;
+        border-color:#000000;  
+        margin-top: 10px;
+        margin-bottom: 10px; 
+        border: 2px solid black; 
+
+    }
+  
 }
